2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: finally fixed 'blood' names

2002-06-24  Ryan Nunn  <triforce@merlin.net.au>
	* ChangeLog : Removed comment that was meant for the other branch

2002-06-24  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixed a problem with gloves not using both fingers in BG.
	* actors.cc, gumps/Gump_manager.cc : Fixed a problem where using a
	  Female avatar in BG with ye olde style inventories would stop the 'I'
	  key from working
	* actors.h, gumps/Actor_gump.cc : Blue lines are now removed when two
	  handed or two fingered item equiped in BG with ye olde style
	  inventories

2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixed a problem when reusing a variable name. Using the
	  other variable with the same name and an initializer of the new one
	  is a bad idea.

2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* gamemap.cc : Fixing the 12*12-1 bug
	* gumps/Paperdoll_gump*.* : Fixing up various paperdoll related problems
	* Makefile.win32 : Removed Exult studio support from Win32 builds.
	  Haven't tested compiling (it could be broken) :-)
	* windrag.* : Is now windows only, and is only compiled if actually
	  compiling with Exult studio support.

2002-06-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucxt/src/ucfunc.cc: fixed compile error if HAVE_SSTREAM defined
	* data/bg/*, gumps/Paperdoll_gump_info.cc: new art by Oblivious

2002-06-19  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Better body placement.
	* schedule.cc: Desk:  Fixed bug with people not sleeping in beds
	or sitting by desks.

2002-06-18  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: When shooting, take don't be blocked by opponent's
	footprint.
	* combat.cc: The enemy of my friend is my enemy.

2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, audio/xmidi.cc : Getting around some problems with (our)
	  snprintf not supporting floating point types. 
