@@ -1,3 +1,6 @@
+2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* objs.cc: more item names for SI
+
 2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* objs.cc: finally fixed 'blood' names
 
